--- a/udaSec/cd0384-java-application-deployment-projectstarter-master/starter/catpoint-parent/pom.xml
+++ b/udaSec/cd0384-java-application-deployment-projectstarter-master/starter/catpoint-parent/pom.xml
@@ -8,18 +8,29 @@
   <artifactId>catpoint-parent</artifactId>
   <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
+
   <modules>
     <module>ImageService</module>
     <module>Security</module>
   </modules>
+
+  <dependencies>
+    <dependency>
+      <groupId>com.miglayout</groupId>
+      <artifactId>miglayout</artifactId>
+      <version>3.7.4</version>
+      <scope>compile</scope>
+    </dependency>
+
+  </dependencies>
 
   <name>catpoint-parent</name>
   <url>http://www.example.com</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>14</maven.compiler.source>
-    <maven.compiler.target>14</maven.compiler.target>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
   </properties>
 
   <build>
