--- a/Udemy-Java/lesson-4-webapp/web-app/src/main/resources/application.properties
+++ b/Udemy-Java/lesson-4-webapp/web-app/src/main/resources/application.properties
@@ -3,4 +3,6 @@
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 
-logging.level.org.springframework=debug
+logging.level.org.springframework=INFO
+
+spring.mvc.format.date=yyyy-MM-dd
