--- a/Udemy-Java/lesson-4-webapp/web-app/src/main/resources/application.properties
+++ b/Udemy-Java/lesson-4-webapp/web-app/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.mvc.view.suffix=.jsp
 logging.level.org.springframework=INFO
 
 spring.mvc.format.date=yyyy-MM-dd
+
+spring.datasource.url=jdbc:h2:mem:testdb
+
+spring.jpa.defer-datasource-initialization = true
