--- a/Udemy-Java/lesson-4-webapp/web-app/src/main/resources/application.properties
+++ b/Udemy-Java/lesson-4-webapp/web-app/src/main/resources/application.properties
@@ -7,6 +7,14 @@ logging.level.org.springframework=INFO
 
 spring.mvc.format.date=yyyy-MM-dd
 
-spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.url=jdbc:h2:mem:testdb
 
-spring.jpa.defer-datasource-initialization = true
+#spring.jpa.defer-datasource-initialization = true
+spring.jpa.show-sql=true
+
+spring.datasource.url=jdbc:mysql://localhost:3306/todos
+spring.datasource.username=todos-user
+spring.datasource.password=dummytodos
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+spring.jpa.hibernate.ddl-auto=update
