--- a/Udemy-Java/lesson-5-restful-web-services/src/main/resources/application.properties
+++ b/Udemy-Java/lesson-5-restful-web-services/src/main/resources/application.properties
@@ -1,2 +1,8 @@
-// actuator settings
+# actuator settings
 management.endpoints.web.exposure.include=*
+
+# h2 setup
+spring.datasource.url=jdbc:h2:mem:testdb
+
+# load sql after server init
+spring.data.defer-datasource-initialization=true
