jpa manytoone onetomany

--- a/Udemy-Java/lesson-5-restful-web-services/src/main/resources/application.properties
+++ b/Udemy-Java/lesson-5-restful-web-services/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.url=jdbc:h2:mem:testdb
 
 # load sql after server init
 spring.data.defer-datasource-initialization=true
+spring.jpa.show-sql=true
