--- a/Udemy-Java/lesson-5-restful-web-services/src/main/resources/application.properties
+++ b/Udemy-Java/lesson-5-restful-web-services/src/main/resources/application.properties
@@ -7,3 +7,11 @@ spring.datasource.url=jdbc:h2:mem:testdb
 # load sql after server init
 spring.data.defer-datasource-initialization=true
 spring.jpa.show-sql=true
+
+# mysql setup
+# launch docker mysql and add mysql dependency in pom
+#spring.datasource.url=jdbc:mysql://localhost:3306/???
+#spring.datasource.username=??
+#spring.datasource.password=??
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
