spring security setup

--- a/Udemy-Java/lesson-5-restful-web-services/src/main/resources/application.properties
+++ b/Udemy-Java/lesson-5-restful-web-services/src/main/resources/application.properties
@@ -15,3 +15,7 @@ spring.jpa.show-sql=true
 #spring.datasource.password=??
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# spring security setup/ username /password
+# spring.security.user.name=??
+# spring.security.user.password=??
