--- a/Udemy-Java/lesson-5-restful-web-services/pom.xml
+++ b/Udemy-Java/lesson-5-restful-web-services/pom.xml
@@ -61,6 +61,10 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 <!--		local host 8080 becomes hal explorer-->
 		<dependency>
 			<groupId>org.springframework.data</groupId>
