--- a/Udemy-Java/lesson-6-fullstack/todo-backend/pom.xml
+++ b/Udemy-Java/lesson-6-fullstack/todo-backend/pom.xml
@@ -54,11 +54,10 @@
 			<artifactId>h2</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>jakarta.persistence</groupId>
-			<artifactId>jakarta.persistence-api</artifactId>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 	</dependencies>
-
 	<build>
 		<plugins>
 			<plugin>
