--- a/Udemy-Java/lesson-8-gradle-spring-security/src/main/resources/application.properties
+++ b/Udemy-Java/lesson-8-gradle-spring-security/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 
-spring.security.user.name = user
-spring.security.user.password = user
+#spring.security.user.name = user
+#spring.security.user.password = user
