--- a/Udemy-Java/lesson-8-gradle-spring-security/build.gradle
+++ b/Udemy-Java/lesson-8-gradle-spring-security/build.gradle
@@ -19,6 +19,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
 	implementation 'com.h2database:h2'
+	implementation 'com.nimbusds:nimbus-jose-jwt'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 }
