--- a/JavaFX/Todo/todo/pom.xml
+++ b/JavaFX/Todo/todo/pom.xml
@@ -64,7 +64,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.todo/com.example.todo.HelloApplication</mainClass>
+                            <mainClass>com.example.todo/com.example.todo.Application</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
